--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@font-face {
+  font-family: 'FilmotypeWand';
+  src: url('./fonts/FilmotypeWand.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'etude';
+  src: url('./fonts/etude.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
